force-app/main/default/objects/AX360_Authentication_Setting__mdt/AX360_Authentication_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration parameters for the authentication to iA&apos;s AX-360 APIs</description>
    <label>AX360 Authentication Setting</label>
    <pluralLabel>AX360 Authentication Settings</pluralLabel>
</CustomObject>