force-app/main/default/objects/AX360_Authentication_Setting__mdt/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <inlineHelpText>The authentication provider own callback URL</inlineHelpText>
    <label>Callback URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>