force-app/main/default/objects/AX360_Authentication_Setting__mdt/fields/Cerificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Cerificate_Name__c</fullName>
    <inlineHelpText>The name of the certificate provided by iA to authenticate API calls</inlineHelpText>
    <label>Cerificate Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>