force-app/main/default/objects/AX360_Authentication_Setting__mdt/fields/Certificate_thumbprint__c.field-meta.xml
<CustomField>
    <fullName>Certificate_thumbprint__c</fullName>
    <inlineHelpText>Base64url-encoded SHA-256 thumbprint of the X.509 certificate&apos;s DER encoding</inlineHelpText>
    <label>Certificate thumbprint</label>
    <length>44</length>
    <required>true</required>
    <type>Text</type>
</CustomField>