force-app/main/default/objects/AX360_Authentication_Setting__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <inlineHelpText>The client ID provided by iA</inlineHelpText>
    <label>Client ID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>