force-app/main/default/objects/AX360_Authentication_Setting__mdt/fields/scope__c.field-meta.xml
<CustomField>
    <fullName>scope__c</fullName>
    <inlineHelpText>The oauth scope provided by iA</inlineHelpText>
    <label>scope</label>
    <length>132</length>
    <required>true</required>
    <type>Text</type>
</CustomField>