force-app/main/default/objects/AX360_Authentication_Setting__mdt/fields/Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenant_ID__c</fullName>
    <inlineHelpText>The tenant ID provided by iA</inlineHelpText>
    <label>Tenant ID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>