force-app/main/default/objects/AX360_Authentication_Setting__mdt/fields/Token_named_credentials__c.field-meta.xml
<CustomField>
    <fullName>Token_named_credentials__c</fullName>
    <inlineHelpText>The name of the named credentials that holds the base URL of Microsoft&apos;s token endpoint</inlineHelpText>
    <label>Token named credentials</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>